--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a restful api service for querying mesos related resources.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js --exec babel-node --presets es2015,stage-2",
+    "build": "babel . -d dist --presets es2015,stage-2",
+    "serve": "node dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -13,13 +15,21 @@
   "keywords": [
     "mesos"
   ],
-  "author": "agate",
+  "author": "agate.hao@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/agate/mesosir/issues"
   },
   "homepage": "https://github.com/agate/mesosir#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "nodemon": "^1.11.0"
   }
 }
